Don't provide the IP for DatagramSocket anymore, let Java figure out the local IP - fixes #30